--- a/FileUploadApp/Views/Shared/_Layout.cshtml
+++ b/FileUploadApp/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <img class="navbar-img" src="/img/up-logo.png" width="35px" alt="logo" srcset="">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index">FileUploadApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -21,9 +22,6 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Página Inicial</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Arquivo" asp-action="Upload">Upload</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Arquivo" asp-action="Lista">Lista de Arquivos</a>
